# moodle_ui_test

./: .travis.yml  README.md  conftest.py  pyproject.toml  report.html  requirements.txt
fixtures/: constants.py
fixtures/locators/: login.py  register.py
fixtures/models/: login.py  register.py
fixtures/pages/: application.py  base_page.py  login.py  register.py
tests/login/: test_login.py  test_registration.py
