[tool.poetry]
name = "test"
version = "0.1.0"
description = ""
authors = ["berpress"]

[tool.poetry.dependencies]
python = "^3.9"
Faker = "^9.8.3"
selenium = "^4.1.0"
pytest = "^6.2.5"
webdriver-manager = "^3.5.2"
allure-pytest = "^2.9.45"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
